[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=3]
[ext_resource path="res://Themes/Fonts/chevy-ray-pixel-font/ChevyRay - Bubble Time.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/2drums&bass.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/ui-up-down2.mp3" type="AudioStream" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 302 )
scale = Vector2( 8.25807, 10.0667 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -35.5
margin_right = 56.0
margin_bottom = 35.5
rect_pivot_offset = Vector2( 1, 0 )

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 112.0
margin_bottom = 23.0
focus_neighbour_top = NodePath("../QuitButton")
mouse_filter = 2
theme = SubResource( 1 )
text = "Start"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 112.0
margin_bottom = 50.0
mouse_filter = 2
text = "Controls"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 112.0
margin_bottom = 77.0
focus_neighbour_bottom = NodePath("../StartButton")
mouse_filter = 2
text = "Quit"

[node name="CopyrightLabel" type="Label" parent="."]
margin_left = 728.0
margin_top = 568.0
margin_right = 985.0
margin_bottom = 585.0
custom_colors/font_color = Color( 0.980392, 0.972549, 0.972549, 1 )
text = "(c) Dittmann Productions"

[node name="TtileLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_top = 71.0
margin_right = 137.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 2 )
text = "G N O P"

[node name="UIAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="BackgroundAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
